Fixed layout issues

--- a/MedicalSuiteWeb/wwwroot/css/site.css
+++ b/MedicalSuiteWeb/wwwroot/css/site.css
@@ -23,9 +23,7 @@ body {
 
 
 
-.form-label, form-control {
-    color: white;
-}
+
 .jumbotron {
     background-color: #f8f9fa;
     padding: 4rem 2rem;
